# midi1_serial_example

./: .gitignore  CMakeLists.txt  Kconfig  README.rst  compile_mcxw71.sh  create_size_reports.sh  prj.conf
.github/workflows/: codeql.yml
boards/: frdm_k64f.overlay  frdm_mcxa156.overlay  frdm_mcxc242.overlay  frdm_mcxc242.overlay.orig  frdm_mcxc242.overlay.sdd1306_display_driver  frdm_mcxc242.overlay.sh1106_display_driver  frdm_mcxw71.conf  frdm_mcxw71.overlay  frdm_rw612.conf  frdm_rw612.overlay  frdm_rw612.overlay.old_midi  sh1106_display.overlay
drivers/: CMakeLists.txt  Kconfig  midi1.c  midi1.h  midi1_serial.c  midi1_serial.h  module.yml
src/: common.h  common.h~  lvgl_thread.c  lvgl_thread.c~  main.c  midi1_receive_thread.c  midi1_receive_thread.c~
tests/: run_tests.sh
tests/midi1_parser/: CMakeLists.txt  Kconfig  prj.conf  run_tests.sh  testcase.yaml
tests/midi1_parser/boards/: qemu_cortex_m0.overlay  qemu_cortex_m3.overlay
tests/midi1_parser/src/: test_midi1_parser.c  test_midi1_parser.c.old
